--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
 		 &nbsp;<br /></td>
         </tr>
         <tr>
-          <td width="165"><div align="center" class="STYLE13"><a href="Untitled-2.html" class="STYLE3">作者</a></div></td>
+          <td width="165"><div align="center" class="STYLE13"><a href="zzh.html">作者</a></div></td>
         </tr>
         <tr>
           <td width="165"><a href="Untitled-6.html">影视作品之---人物风采</a></td>
