--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
           <td width="165"><div align="center" class="STYLE13"><a href="zzh.html">作者</a></div></td>
         </tr>
         <tr>
-          <td width="165"><a href="Untitled-6.html">影视作品之---人物风采</a></td>
+          <td width="165"><a href="ysh.html">影视作品之---人物风采</a></td>
         </tr>
         <tr>
           <td width="165"><a href="Untitled-3.html">最喜欢的男主</a></td>
