--- a/hr.html
+++ b/hr.html
@@ -41,7 +41,7 @@ a:active {
 <body bgcolor="#F4FFE4">
 <table border="0" cellspacing="0" cellpadding="0">
   <tr bgcolor="#D5EDB3">
-    <td colspan="2" rowspan="2"><span class="STYLE5"><a href="9.html"><img src="../模板/t013273fcea94357d29.jpg" width="539" height="209" border="0" /></a></span></td>
+    <td colspan="2" rowspan="2"><span class="STYLE5"><a href="index.html"><img src="t013273fcea94357d29.jpg" width="539" height="209" border="0" /></a></span></td>
     <td width="582" height="50" id="logo" valign="bottom" align="center" nowrap="nowrap">&nbsp;</td>
     <td width="700">&nbsp;</td>
   </tr>
@@ -49,14 +49,10 @@ a:active {
   <tr bgcolor="#D5EDB3">
     <td height="51" id="tagline" valign="top" align="center"><p class="STYLE5">作家<a target="_blank" href="http://baike.baidu.com/view/697395.htm">董千里</a>：黄蓉这个角色呢，又聪明又美丽，眉角眼梢</p>
     <p class="STYLE5">充满灵气。我给她八个字“静若处女、动如脱兔”。</p></td>
-	<td width="700"><table width="505" height="168" border="0">
+	<td width="700"><table width="193" height="154" border="0">
       <tr>
-        <td><a href="9.html" class="STYLE1">一</a></td>
-        <td><a href="Untitled-2.html" class="STYLE1">二</a></td>
-        <td><a href="Untitled-6.html" class="STYLE1">三</a></td>
-        <td><a href="Untitled-3.html" class="STYLE1">四</a></td>
-        <td><a href="Untitled-4.html" class="STYLE1">五</a></td>
-      </tr>
+        <td><a href="yg.html"><img src="u=1352711805,16020673&amp;fm=21&amp;gp=0.jpg" width="89" height="136" border="0" /></a><a href="wg.html"><img src="u=1352711805,16020673&amp;fm=21&amp;gp=0.jpg" width="89" height="136" border="0" /></a></td>
+        </tr>
     </table></td>
   </tr>
 
@@ -90,7 +86,7 @@ a:active {
 		  &nbsp;<br />		  </td>
         </tr>
         <tr>
-          <td width="664" height="250" rowspan="2" align="center" class="subHeader"><img src="../模板/12588405412237501835.jpg" width="495" height="376" /></td>
+          <td width="664" height="250" rowspan="2" align="center" class="subHeader"><img src="12588405412237501835.jpg" width="495" height="376" /></td>
           <td width="2" rowspan="2">&nbsp;</td>
           <td width="431" class="subHeader"><p>&nbsp;</p>
             <p><span class="STYLE3">黄蓉</span></p>
@@ -139,7 +135,7 @@ a:active {
           <p>&nbsp;</p></td>
         </tr>
       </table>      </td>
-    <td width="700"><img src="../模板/20150829125445_eBmNf.thumb.700_0.jpeg" width="500" height="800" /></td>
+    <td width="700"><img src="20150829125445_eBmNf.thumb.700_0.jpeg" width="500" height="800" /></td>
   </tr>
 
  <tr>
@@ -184,7 +180,7 @@ a:active {
       </dl>
     </div></td>
     <td width="582" valign="top"><div align="center"><span class="STYLE1">青山相待，白云相爱。</span></div>
-    <img src="../模板/20150525150816-1322613543.jpg" width="453" height="597" /></td>
+    <img src="20150525150816-1322613543.jpg" width="453" height="597" /></td>
 	<td width="700" valign="top"><p class="STYLE2"> 也许那些没读过金庸射雕原著的人对黄蓉的印象是在电视剧神雕侠侣中，那时的黄蓉已经是有了一个女儿</p>
     <p class="STYLE2">的中年妇女了，性格等各方面都发生了变化。而射雕中的黄蓉冰雪聪明，活泼可爱，时而天真烂漫时而又</p>
     <p class="STYLE2">心事重重。有情有义，对郭靖无比的爱恋。而且擅长于厨艺，能让吃遍天下的丐帮帮主赞口不绝。这样的</p>
