--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
 .STYLE13 {font-size: 72px; font-weight: bold; }
 .STYLE18 {font-size: 24px; }
 .STYLE19 {color: #FFCC66}
+body,td,th {
+	font-size: 16px;
+}
+a {
+	font-size: 24px;
+}
+.STYLE22 {color: #333333}
 -->
 </style>
 </head>
@@ -82,17 +89,16 @@ var TODAY = monthname[d.getMonth()] + " " + d.getDate() + ", " + d.getFullYear()
           <td width="165"><a href="ysh.html">影视作品之---人物风采</a></td>
         </tr>
         <tr>
-          <td width="165"><a href="Untitled-3.html">最喜欢的男主</a></td>
+          <td width="165"><div align="center"><a href="yg.html">最喜欢的男主</a></div></td>
         </tr>
         <tr>
-          <td width="165"><a href="Untitled-1.html">最喜欢的女主</a></td>
+          <td width="165"><div align="center"><a href="hr.html">最喜欢的女主</a></div></td>
         </tr>
         <tr>
-          <td width="165"><a href="Untitled-4.html">武功排名</a></td>
+          <td width="165"><div align="center"><a href="wg.html" class="STYLE22">武功排名</a></div></td>
         </tr>
       </table>
- 	?<br />
-  	&nbsp;<br />
+ 	<br />
   	&nbsp;<br />
   	&nbsp;<br /></td>
     <td width="50" bgcolor="#FFCC66"><img src="mm_spacer.gif" alt="" width="50" height="1" border="0" /></td>
