--- a/zzh.html
+++ b/zzh.html
@@ -49,7 +49,7 @@ a:active {
 <body bgcolor="#F4FFE4">
 <table width="100%" height="1865" border="0" cellpadding="0" cellspacing="0">
   <tr bgcolor="#D5EDB3">
-    <td colspan="2" rowspan="2"><a href="index.html"><img src=".././模板/t013273fcea94357d29.jpg" width="324" height="155" border="0" /></a><a href=".././模板/9.html"></a></td>
+    <td colspan="2" rowspan="2"><a href="index.html"><img src="t013273fcea94357d29.jpg" width="324" height="155" border="0" /></a><a href=".././模板/9.html"></a></td>
     <td width="471" height="50" id="logo" valign="bottom" align="center" nowrap="nowrap">&nbsp;</td>
     <td width="808">&nbsp;</td>
   </tr>
@@ -93,7 +93,7 @@ a:active {
           </div></td>
         </tr>
         <tr>
-          <td width="320" height="250" rowspan="2" align="center" class="subHeader"><img src=".././模板/2013611443233641.jpg" width="326" height="315" /></td>
+          <td width="320" height="250" rowspan="2" align="center" class="subHeader"><img src="2013611443233641.jpg" width="326" height="315" /></td>
           <td width="30" rowspan="2">&nbsp;</td>
           <td width="260" class="subHeader"><p><span class="STYLE5">原名<span class="STYLE10">查良镛</span>（yong）</span><br />
               <br />          
@@ -110,14 +110,11 @@ a:active {
           <p>&nbsp;</p></td>
         </tr>
       </table>      
-    <table width="505" height="168" border="0">
+    <table width="239" height="168" border="0">
       <tr>
-        <td><a href="9.html" class="STYLE11">一</a></td>
-        <td><a href="Untitled-6.html" class="STYLE11">二</a></td>
-        <td><a href="Untitled-3.html" class="STYLE11">三</a></td>
-        <td><a href="Untitled-1.html" class="STYLE11">四</a></td>
-        <td><a href="Untitled-4.html" class="STYLE11">五</a></td>
-      </tr>
+        <td width="140"><a href="index.html"><img src="u=1352711805,16020673&amp;fm=21&amp;gp=0.jpg" width="110" height="166" border="0" /></a></td>
+        <td width="355"><a href="ysh.html"><img src="u=1352711805,16020673&amp;fm=21&amp;gp=0.jpg" width="110" height="163" border="0" /></a><a href="Untitled-6.html" class="STYLE11"></a></td>
+        </tr>
     </table>
     <p>&nbsp;</p></td>
     <td width="808"><div class="STYLE6">
@@ -162,8 +159,8 @@ a:active {
  <tr>
     <td width="34">&nbsp;</td>
     <td width="333"><span class="STYLE9">放两张真容：</span></td>
-    <td width="471"><img src=".././模板/4a36acaf2edda3cc8a32f62f06e93901203f92ef.jpg" width="408" height="503" /></td>
-	<td width="808"><img src=".././模板/dbb44aed2e738bd4d7bb2d53a28b87d6277ff93e.jpg" width="337" height="500" /><img src=".././模板/e7cd7b899e510fb33701e9f5da33c895d1430cb3.jpg" width="460" height="501" /></td>
+    <td width="471"><img src="4a36acaf2edda3cc8a32f62f06e93901203f92ef.jpg" width="408" height="503" /></td>
+	<td width="808"><img src="dbb44aed2e738bd4d7bb2d53a28b87d6277ff93e.jpg" width="337" height="500" /><img src="e7cd7b899e510fb33701e9f5da33c895d1430cb3.jpg" width="460" height="501" /></td>
   </tr>
 </table>
 </body>
